fix: word-backtrack height recalc + BiDi midpoint hit testing
- Recalculate curRow.height/ascent and row.height/ascent after
  word-backtracking splice using getElementRowMargin + metrics
- BiDi mixed rows: use visual boundary matching for midpoint check
  instead of j-1 (logical neighbors != visual neighbors for RTL)
- Scan positionList for nearest rightTop <= x to find correct cursor
  position for both LTR and RTL elements in mixed rows
- Verify table cells use same recursive BiDi pipeline (no bypasses)
- Verify all 5 architecture invariants maintained
- Audit TESTING-CONSTRAINTS.md coverage (all sections pass)

--- a/src/poc/poc-shaping.html
+++ b/src/poc/poc-shaping.html
@@ -177,13 +177,14 @@
     <div class="control-group">
       <label>Direction</label>
       <select id="directionSelect">
-        <option value="rtl" selected>RTL (Arabic/Hebrew)</option>
-        <option value="ltr">LTR (Latin/etc.)</option>
+        <option value="rtl" selected>RTL (Arabic)</option>
+        <option value="ltr">LTR (English/Latin/etc.)</option>
       </select>
     </div>
     <div class="control-group">
       <label>Font Size</label>
       <select id="fontSizeSelect">
+        <option value="16">16px</option>
         <option value="24">24px</option>
         <option value="32">32px</option>
         <option value="48" selected>48px</option>
